# Zephyr2VSC

./: .coveragerc  .flake8  .gitignore  .gitmodules  Contributors.txt  LICENSE  ReadMe.md  ReadMe.txt  Todo.txt  c_cpp_properties.json  pyproject.toml  settings.json  zephyr2vsc.py
.github/workflows/: python-package.yaml  python-project.yaml  zephyr2vsc.yaml
tests/: test_original.py
tests/fixtures/zephyrproject/: .gitignore
tests/fixtures/zephyrproject/.west/: config
tests/original/: c_cpp_properties.json  settings.json  zephyr2vsc.py
zephyr2vsc/: __main__.py  const.py  helpers.py
