[project]
name = "zephyr2vsc"
description = "A tool to import Zephyr code into Visual Studio Code in the context of a Zephyr application"
version = "0.0.2"
authors = [
    {name = "Ming Shao", email = "ming.shao@intel.com"},
    {name = "J.P. Hutchins", email = "jphutchins@gmail.com" },
]
readme = "ReadMe.md"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["zephyr2vsc"]

[project.optional-dependencies]
dev = [
    "black >= 22.3.0",
    "flake8 >= 4.0.1",
    "isort >= 5.10.1",
    "mypy >= 0.961",
    "mypy-extensions >= 0.4.3",
    "pytest >= 7.1.2",
    "pytest-cov >= 3.0.0",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 35.0.2",
]

[tool.black]
line-length = 100
skip-string-normalization = 1
extend-exclude = "zephyr2vsc.py|tests/fixtures/zephyrproject/*"

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
extend_skip = ["zephyr2vsc.py", "tests/fixtures/zephyrproject"]

[tool.mypy]
exclude = ["zephyr2vsc.py", "tests/fixtures/zephyrproject", "venv"]

[tool.pytest.ini_options]
norecursedirs = "tests/fixtures"